--- a/src/app.html
+++ b/src/app.html
@@ -16,8 +16,12 @@
 	<!-- add to homescreen for ios    -->
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<meta name="apple-mobile-web-app-title" content="Diet Tracker">
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/icon-180.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/icon-152.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/icon-144.png">
+
 	<link rel="icon" type="image/png" sizes="32x32" href="/icon-32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/icon-16.png">
 	<link rel="alternate icon" href="/icon-16.png" type="image/png" sizes="16x16">
