--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,7 @@
 	<!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
 	<meta name="apple-mobile-web-app-title" content="Diet Tracker">
 	
-	<link rel="manifest" href="%svelte.assets%/manifest.json">
+	<link rel="manifest" href="/manifest.json">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/icon180.png">
 	<link rel="apple-touch-icon" sizes="152x152" href="/icon152.png">
